# promcat

./: .pre-commit-config.yaml  .promcatignore  pyproject.toml
src/promcat/: cli.py  core.py
tests/: test_promcat.py
