[project]
name = "promcat"
version = "0.1.0"
description = "Concatenate all text files in a directory"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gitignore_parser>=0.1.3",
    "click>=8.0.0",
]

[project.scripts]
promcat = "promcat.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

